kubernetes/apps/network/external-services/truenas/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.26.1-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: external-service-truenas
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
  type: ClusterIP
