kubernetes/apps/network/external-services/truenas/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.budimanjojo.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: truenas
  namespace: network
spec:
  hostnames:
    - "nas.f-wi.com"
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
    - backendRefs:
        - name: external-service-truenas
          port: 80
